--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,20 +10,20 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
 #works
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
 
 #works
 spring.jpa.show-sql=true
 
 #ignored
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate_format_sql=true
-#spring.jpa.properties.format_sql=true
-#spring.jpa.hibernate.format_sql=true
-#spring.jpa.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate_format_sql=true
+spring.jpa.properties.format_sql=true
+spring.jpa.hibernate.format_sql=true
+spring.jpa.format_sql=true
 
 #ignored
-#spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.type=trace
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
